# main-street-media-co

./: .env.example  .gitignore  AGENTS.md  FRAMER_REFERENCE.md  PROJECT_STATUS.md  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
api/: audit-engine.ts  audit-request.ts  lead-audit.ts  lead-crawl.ts
api/services/: audit-engine.ts
docs/: CRM_GOOGLE_DRIVE_CRAWLER_ACCESS.md
integrations/google-apps-script/: msm-crm-drive-webhook.js
public/: robots.txt  sitemap.xml
scrapers/mainstreet-local-scraper/: .env.example  .gitignore  ASSIGNMENT.md  README.md  pyproject.toml
scrapers/mainstreet-local-scraper/src/local_scraper/: __init__.py  cli.py  config.py  firecrawl_toolbelt.py  models.py  storage.py  swarm.py
scrapers/mainstreet-local-scraper/tests/: test_swarm.py
src/: App.tsx  MainStreetWebAuthorityPage.tsx  WebAuthority.tsx  calComRuntime.ts  enterprise.css  main.tsx  styles.css
src/data/: webAuthorityArticles.ts
supabase/functions/audit-request/: index.ts
supabase/migrations/: 20260715190742_allow_public_audit_requests_via_edge_function.sql
